--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                             <p>54 Min Ago</p>
                         </div>
                         <div class="user">
-                            <img src="images/1704874044316.jpg">
-                            <h5>Ember</h5>
+                            <img src="images/1704874044332.jpeg">
+                            <h5>Mohnad</h5>
                             <p>3 Hours Ago</p>
                         </div>
                         <div class="user">
